--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -1,64 +1,171 @@
-.menu {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: #010101;
-    padding: 20px;
-    z-index: 999;
-  }
-  
-  .menu.open {
-    height: 100vh;
-  }
-  
-  .menu-toggle {
-    display: none;
-    background-color: transparent;
-    border: none;
-    font-size: 16px;
-    cursor: pointer;
-  }
-  
-  .menu-items {
+/*Declaração de variaveis*/
+:root{
+    --main-color:#040714;
+    --site-color:#fff;
+    --active-color:#0063ef;
+    --first-color:#08132f;
+    --second-color:#090b13;
+    --third-color: #1b202a;
+}
+
+.navbar {
+    background-color: var(--main-color);
+    border-bottom: solid var(--third-color) 1px ;
+    height: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
-    list-style: none;
-    font-size: 1.5rem;
-    margin: 0;
-    padding: 0;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 1.2rem;
+    position: sticky;
+    top: 0;
+    z-index: 999;
   }
   
-  .menu-items li {
+  .navbar-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80px;
+    max-width: 1500px;
+  }
+  
+  .navbar-logo {
+    color: var(--active-color);
+    justify-self: start;
     margin-left: 20px;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 35px;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
   }
   
-  .menu-items li a {
+  .nav-menu {
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    grid-gap: 10px;
+    list-style: none;
+    text-align: center;
+    width: 60vw;
+    justify-content: end;
+    margin-right: 2rem;
+  }
+  
+  .nav-item {
+    height: 80px;
+  }
+  
+  .nav-links {
+    color: #fff;
+    display: flex;
+    align-items: center;
     text-decoration: none;
+    padding: 0.5rem 1rem;
+    height: 100%;
+  }
+  
+  .nav-links:hover {
+    color: var(--active-color);
+    border-bottom: 4px solid #fff;
+    transition: all 0.2s ease-out;
+  }
+  
+  .fa-bars {
     color: #fff;
   }
   
-  @media (max-width: 768px) {
-    .menu-toggle {
-      display: block;
-    }
-  
-    .menu-items {
-      flex-direction: column;
-      align-items: flex-start;
-      position: absolute;
-      top: 100%;
-      left: 0;
-      width: 100%;
-      background-color: #010101;
-      padding: 20px;
-      transition: transform 0.3s ease-in;
-      transform: translateY(-100%);
-    }
-  
-    .menu.open .menu-items {
-      transform: translateY(0);
-    }
+  .nav-links-mobile {
+    display: none;
   }
   
+  .menu-icon {
+    display: none;
+  }
+  
+  @media screen and (max-width: 960px) {
+    .NavbarItems {
+      position: relative;
+    }
+  
+    .nav-menu {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      height: 90vh;
+      position: absolute;
+      top: 80px;
+      left: -100%;
+      opacity: 1;
+      transition: all 0.5s ease;
+    }
+  
+    .nav-menu.active {
+      background: #242222;
+      left: 0;
+      opacity: 1;
+      transition: all 0.5s ease;
+      z-index: 1;
+    }
+  
+    .nav-links {
+      text-align: center;
+      padding: 2rem;
+      width: 100%;
+      display: table;
+    }
+  
+    .nav-links:hover {
+      background-color: #fff;
+      color: #242424;
+      border-radius: 0;
+    }
+  
+    .navbar-logo {
+      position: absolute;
+      top: 0;
+      left: 0;
+      transform: translate(25%, 50%);
+    }
+
+    .navbar-logo img{
+      margin-top: -35px;
+    }
+  
+    .menu-icon {
+      display: block;
+      position: absolute;
+      top: 0;
+      right: 0;
+      transform: translate(-100%, 60%);
+      font-size: 1.8rem;
+      cursor: pointer;
+    }
+  
+    .fa-times {
+      color: #fff;
+      font-size: 2rem;
+    }
+  
+    .nav-links-mobile {
+      display: block;
+      text-align: center;
+      margin: 2rem auto;
+      border-radius: 4px;
+      width: 80%;
+      text-decoration: none;
+      font-size: 1.5rem;
+      background-color: transparent;
+      color: #fff;
+      padding: 14px 20px;
+      border: 1px solid #fff;
+      transition: all 0.3s ease-out;
+    }
+  
+    .nav-links-mobile:hover {
+      background: #fff;
+      color: var(--main-color);
+      transition: 250ms;
+    }
+  }
